# pointcloud

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run.sh
example/: CMakeLists.txt  main.cpp  pc.cpp
include/: camera.h  camera.hpp  ebo.hpp  filehandler.hpp  glad.h  pointcloud.hpp  reader.hpp  shader.h  shader.hpp  stb_image.h  tcpserver.hpp  texture.h  texture.hpp  transform.hpp  types.hpp  vao.h  vao.hpp  vbo.h  vbo.hpp  window.hpp
script/: default.frag  default.vert  pc.frag  pc.vert
src/: camera.cc  ebo.cc  glad.c  main.cpp  pc.cpp  shader.cc  tcpserver.cc  texture.cc  transform.cc  vao.cc  vbo.cc  window.cc
